-Proper die initialization. Dice no longer change spacing upon text output. Looking for a way to change titlebar text/icon.

--- a/src/ceeloproject/styles.css
+++ b/src/ceeloproject/styles.css
@@ -1,3 +1,9 @@
+/*
+    This is a Cascading Style sheet for our FXML file. It keeps everything
+    nice and organized.
+*/
+
+
 #gridp {
     -fx-border-style: solid;
     -fx-border-color: linear-gradient(from 0% 0% to 100% 200%, repeat, transparent 25%, #710071 50%); /*type, color, radius, feathering (1.0=100% opacity), X, -Y*/;
@@ -6,6 +12,7 @@
     -fx-alignment: center;
 }
 /*
+This is commented out to preserve individual styles across multiple lines of text as needed.
 Label {
    
     -fx-text-fill: slateblue;
